--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
                            'src/main/res/layouts/home',
                            'src/main/res/layouts/profile',
                            'src/main/res/assets/icons',
-                           'src/main/res/assets/images',
+                           'src/main/res/assets/images'
+
             ]
         }
     }
