--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.skripsol'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.skripsol"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -32,20 +32,19 @@ android {
     }
     sourceSets {
         main {
-            res.srcDirs = ['src/main/res',
-                           'src/main/res/layouts/auth',
-                           'src/main/res/layouts/home',
-                           'src/main/res/layouts/profile',
-                           'src/main/res/assets/icons',
-                           'src/main/res/assets/images'
-
+            res.srcDirs = [
+                'src/main/res',
+                'src/main/res/layouts/auth',
+                'src/main/res/layouts/home',
+                'src/main/res/layouts/profile',
+                'src/main/res/assets/icons',
+                'src/main/res/assets/images'
             ]
         }
     }
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -53,4 +52,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
