--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ android {
                 'src/main/res/layouts/home',
                 'src/main/res/layouts/profile',
                 'src/main/res/assets/icons',
-                'src/main/res/assets/images'
+                'src/main/res/assets/images',
+                'src/main/res/assets/background'
             ]
         }
     }
