--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
                 'src/main/res/layouts/navbar',
                 'src/main/res/layouts/profile',
                 'src/main/res/assets/icons',
-                'src/main/res/assets/images'
+                'src/main/res/assets/images',
+                'src/main/res/assets/borders'
             ]
         }
     }
