--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/gradient_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -26,7 +26,7 @@
 <!--        </activity>-->
         <activity
             android:screenOrientation="portrait"
-            android:name=".navbar.HeadFragment"
+            android:name=".navbar.HomeMenu.FormPengajuan"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -38,6 +38,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+<!--        <activity android:name=".navbar.HomeMenu.InputJudulTA"-->
+<!--            android:exported="true"/>-->
+<!--        <activity android:name=".navbar.HomeMenu.Monitoring"-->
+<!--            android:exported="true"/>-->
+<!--        <activity android:name=".navbar.HomeMenu.FormPengajuan"-->
+<!--            android:exported="true"/>-->
+<!--        <activity android:name=".navbar.HomeMenu.UpdateStatus"-->
+<!--            android:exported="true"/>-->
 <!--        <activity android:name=".navbar.HeadFragment"-->
 <!--            android:exported="false"/>-->
     </application>
