--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 <!--        </activity>-->
         <activity
             android:screenOrientation="portrait"
-            android:name=".navbar.HomeMenu.FormPengajuan"
+            android:name=".navbar.HomeMenu.UpdateStatus"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
