--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Skripsol"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name="."-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
         <activity
             android:screenOrientation="portrait"
-            android:name=".navbar.HomeMenu.UpdateStatus"
+            android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -38,16 +26,16 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-<!--        <activity android:name=".navbar.HomeMenu.InputJudulTA"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.Monitoring"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.FormPengajuan"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.UpdateStatus"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HeadFragment"-->
-<!--            android:exported="false"/>-->
+        <activity android:name=".navbar.HomeMenu.InputJudulTA"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.Monitoring"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.FormPengajuan"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.UpdateStatus"
+            android:exported="true"/>
+        <activity android:name=".navbar.HeadFragment"
+            android:exported="false"/>
     </application>
 
 </manifest>
