--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".navbar.HomeMenu.InputJudulTA"
             android:exported="true"/>
+        <activity android:name=".auth.Login" />
         <activity android:name=".navbar.HomeMenu.Monitoring"
             android:exported="true"/>
         <activity android:name=".navbar.HomeMenu.FormPengajuan"
