--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 <!--        </activity>-->
         <activity
             android:screenOrientation="portrait"
-            android:name=".navbar.HomeMenu.UpdateStatus"
+            android:name=".navbar.HeadFragment"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -38,14 +38,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-<!--        <activity android:name=".navbar.HomeMenu.InputJudulTA"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.Monitoring"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.FormPengajuan"-->
-<!--            android:exported="true"/>-->
-<!--        <activity android:name=".navbar.HomeMenu.UpdateStatus"-->
-<!--            android:exported="true"/>-->
+        <activity android:name=".navbar.HomeMenu.InputJudulTA"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.Monitoring"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.FormPengajuan"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.UpdateStatus"
+            android:exported="true"/>
 <!--        <activity android:name=".navbar.HeadFragment"-->
 <!--            android:exported="false"/>-->
     </application>
