--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/gradient_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Skripsol"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name="."-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
         <activity
-            android:name=".navbar.HeadFragment"
+            android:screenOrientation="portrait"
+            android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -37,8 +26,21 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-<!--        <activity android:name=".navbar.HeadFragment"-->
-<!--            android:exported="false"/>-->
+        <activity android:name=".navbar.Home"
+            android:exported="true"/>
+        <activity android:name=".navbar.Chat"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.InputJudulTA"
+            android:exported="true"/>
+        <activity android:name=".auth.Login" />
+        <activity android:name=".navbar.HomeMenu.Monitoring"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.FormPengajuan"
+            android:exported="true"/>
+        <activity android:name=".navbar.HomeMenu.UpdateStatus"
+            android:exported="true"/>
+        <activity android:name=".navbar.HeadFragment"
+            android:exported="false"/>
     </application>
 
 </manifest>
