feat(Login) : fix card shape and add new helper function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
 
         </activity>
 
+        <activity android:name=".auth.LupaPassword"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
         <activity android:name=".navbar.HomeMenu.InputJudulTA"
             android:screenOrientation="portrait"
             android:exported="true"/>
