--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
                 'src/main/res/layouts/navbar',
                 'src/main/res/layouts/navbar/home_menu',
                 'src/main/res/layouts/profile',
+                'src/main/res/layouts/alert_dialogs',
                 'src/main/res/assets/icons',
                 'src/main/res/assets/images',
                 'src/main/res/assets/background',
